@@ -1,5 +1,10 @@
 [b]Version 0.6.2[/b]:
 
+(2008-06-05)
+ * Now if we've got info about the size and aspect ratio (the file has been 
+   played before) the main window will be resized before starting to play 
+   the file.
+
 (2008-06-04)
  * When entering in fullscreen, the playlist is hidden only if it's in the
    same screen as the main window. (Untested!)
